Refactor application configuration to unify settings and enhance security, including CORS and database properties; add application properties class for type-safe configuration management.